mikrh allagh sto makefile

--- a/2/makefile
+++ b/2/makefile
@@ -1,9 +1,10 @@
+all: child father
+
 child: child.c
 	gcc child.c -o child
+
 father: father.c
 	gcc father.c -o father
-all: child.c father.c
-	gcc child.c -o child
-	gcc father.c -o father
+
 clean:
 	rm child father
