--- a/4/makefile
+++ b/4/makefile
@@ -1,13 +1,14 @@
-TARGETS = ask_4
+TARGETS = ask_4 server
 
 all: $(TARGETS)
 
 .PHONY: all clean
 
-ask_4: ask_4.o
-	gcc ask_4.o -o ask_4
-ask_4.o: ask_4.c
-	gcc ask_4.c -c -o ask_4.o
+ask_4: ask_4.c
+	gcc ask_4.c -o ask_4
+
+server: server.c
+	gcc server.c -o server
 
 clean:
-	rm ask_4.o ask_4
+	rm ask_4 server
